# weather_app

./: .gitignore  AGENTS.md  README.md  README.uk.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
locale/de/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.mo  django.po
locale/pl/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
locale/uk/LC_MESSAGES/: django.mo  django.po
weather/: tests.py  urls.py  views.py
weather/static/weather/: compare.js  favorites.js  style.css  weather-chart.js
weather/templates/weather/: index.html
