[project]
name = "weather-app"
version = "1.0.0"
description = "Weather app built with Django and openweathermap API, providing current weather information and outfit recommendations based on temperature."
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "django>=6.0.3",
    "gunicorn>=25.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
